Fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 div, p, h1, h2, h3, container, ul {
   padding-left: 10px;
   font-family: sans-serif;
@@ -6,20 +5,21 @@ div, p, h1, h2, h3, container, ul {
 
 nav {
   background-color: DarkBlue;
-
 }
 
 p {
   font-family: Georgia;
+}
 
+#movie {
+  position: absolute;
+  display: block;
+  margin: auto;
 }
 
 /*div {
-
-
   display: block;
   margin: auto;
   width: 40%;
   text-align: center;
-
 }*/
